# Stele

./: .eslintrc.json  .gitignore  .npmignore  ADOPTION.md  ARCHITECTURE.md  BUSINESS_OVERVIEW.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  MANIFESTO.md  MIGRATION.md  PROTOCOL.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  SPECIFICATION.md  THREAT_MODEL.md  bench.js  package-lock.json  package.json  tsconfig.json  typedoc.json  vitest.config.ts  vitest.vectors.config.ts
benchmarks/: bench.test.ts
contracts/: GrithRegistry.sol  KervyxRegistry.sol  NobulexRegistry.sol  README.md  SteleRegistry.sol
docs/: architecture.md  decentralized-discovery.md  deployment.md  performance.md
examples/: 01-basic-covenant.ts  02-delegation-chain.ts  03-identity-lifecycle.ts  04-ccl-patterns.ts  04-trust-gate-quickstart.ts  05-compliance-audit.ts  05-store-and-query.ts  (+4 more)
implementations/python/: README.md  pyproject.toml
implementations/python/grith/: __init__.py  ccl.py  covenant.py  crypto.py  identity.py  store.py
implementations/python/kervyx/: __init__.py  ccl.py  covenant.py  crypto.py  identity.py  store.py
implementations/python/nobulex/: __init__.py  ccl.py  covenant.py  crypto.py  identity.py  store.py
implementations/python/stele/: __init__.py  ccl.py  covenant.py  crypto.py  identity.py  store.py
implementations/python/tests/: test_protocol.py
implementations/rust/: Cargo.toml  README.md
implementations/rust/src/: ccl.rs  covenant.rs  crypto.rs  identity.rs  lib.rs  store.rs
implementations/rust/tests/: protocol_test.rs
(+46 files in other folders)
