[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nobulex"
version = "1.0.0"
description = "Python implementation of the Nobulex protocol for AI covenant management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
