[package]
name = "grith"
version = "1.0.0"
edition = "2021"
description = "The accountability primitive for AI agents - Rust implementation"
license = "MIT"
repository = "https://github.com/agbusiness195/grith"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
